--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,3 +22,15 @@ body {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.cursor {
+    cursor: url('../img/bam.png'), auto;
+}
+
+.points {
+    width: 400px;
+    color: black;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 25px;
+}
